--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -234,6 +234,202 @@
     "df = pd.read_csv(\"C:/Users/Mandela Tangban/Documents/Zummit AI-ML Learning Path/Popular_Spotify_Songs.csv\", encoding='latin1')\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 953 entries, 0 to 952\n",
+      "Data columns (total 24 columns):\n",
+      " #   Column                Non-Null Count  Dtype \n",
+      "---  ------                --------------  ----- \n",
+      " 0   track_name            953 non-null    object\n",
+      " 1   artist(s)_name        953 non-null    object\n",
+      " 2   artist_count          953 non-null    int64 \n",
+      " 3   released_year         953 non-null    int64 \n",
+      " 4   released_month        953 non-null    int64 \n",
+      " 5   released_day          953 non-null    int64 \n",
+      " 6   in_spotify_playlists  953 non-null    int64 \n",
+      " 7   in_spotify_charts     953 non-null    int64 \n",
+      " 8   streams               953 non-null    object\n",
+      " 9   in_apple_playlists    953 non-null    int64 \n",
+      " 10  in_apple_charts       953 non-null    int64 \n",
+      " 11  in_deezer_playlists   953 non-null    object\n",
+      " 12  in_deezer_charts      953 non-null    int64 \n",
+      " 13  in_shazam_charts      903 non-null    object\n",
+      " 14  bpm                   953 non-null    int64 \n",
+      " 15  key                   858 non-null    object\n",
+      " 16  mode                  953 non-null    object\n",
+      " 17  danceability_%        953 non-null    int64 \n",
+      " 18  valence_%             953 non-null    int64 \n",
+      " 19  energy_%              953 non-null    int64 \n",
+      " 20  acousticness_%        953 non-null    int64 \n",
+      " 21  instrumentalness_%    953 non-null    int64 \n",
+      " 22  liveness_%            953 non-null    int64 \n",
+      " 23  speechiness_%         953 non-null    int64 \n",
+      "dtypes: int64(17), object(7)\n",
+      "memory usage: 178.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display information about the DataFrame\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(953, 24)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display the shape of the DataFrame\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['track_name', 'artist(s)_name', 'artist_count', 'released_year',\n",
+       "       'released_month', 'released_day', 'in_spotify_playlists',\n",
+       "       'in_spotify_charts', 'streams', 'in_apple_playlists', 'in_apple_charts',\n",
+       "       'in_deezer_playlists', 'in_deezer_charts', 'in_shazam_charts', 'bpm',\n",
+       "       'key', 'mode', 'danceability_%', 'valence_%', 'energy_%',\n",
+       "       'acousticness_%', 'instrumentalness_%', 'liveness_%', 'speechiness_%'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display all column names in the DataFrame\n",
+    "df.columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "track_name               0\n",
+       "artist(s)_name           0\n",
+       "artist_count             0\n",
+       "released_year            0\n",
+       "released_month           0\n",
+       "released_day             0\n",
+       "in_spotify_playlists     0\n",
+       "in_spotify_charts        0\n",
+       "streams                  0\n",
+       "in_apple_playlists       0\n",
+       "in_apple_charts          0\n",
+       "in_deezer_playlists      0\n",
+       "in_deezer_charts         0\n",
+       "in_shazam_charts        50\n",
+       "bpm                      0\n",
+       "key                     95\n",
+       "mode                     0\n",
+       "danceability_%           0\n",
+       "valence_%                0\n",
+       "energy_%                 0\n",
+       "acousticness_%           0\n",
+       "instrumentalness_%       0\n",
+       "liveness_%               0\n",
+       "speechiness_%            0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for missing values in the DataFrame\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop rows with any missing values\n",
+    "df.dropna(subset=['in_shazam_charts', 'key'], inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "track_name              0\n",
+       "artist(s)_name          0\n",
+       "artist_count            0\n",
+       "released_year           0\n",
+       "released_month          0\n",
+       "released_day            0\n",
+       "in_spotify_playlists    0\n",
+       "in_spotify_charts       0\n",
+       "streams                 0\n",
+       "in_apple_playlists      0\n",
+       "in_apple_charts         0\n",
+       "in_deezer_playlists     0\n",
+       "in_deezer_charts        0\n",
+       "in_shazam_charts        0\n",
+       "bpm                     0\n",
+       "key                     0\n",
+       "mode                    0\n",
+       "danceability_%          0\n",
+       "valence_%               0\n",
+       "energy_%                0\n",
+       "acousticness_%          0\n",
+       "instrumentalness_%      0\n",
+       "liveness_%              0\n",
+       "speechiness_%           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for missing values in the DataFrame\n",
+    "df.isnull().sum()"
+   ]
   }
  ],
  "metadata": {
