--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -430,6 +430,16 @@
     "# Check for missing values in the DataFrame\n",
     "df.isnull().sum()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the cleaned DataFrame to a CSV file named 'updated_spotify_playlist.csv'\n",
+    "df.to_csv('updated_spotify_playlist.csv')"
+   ]
   }
  ],
  "metadata": {
