--- a/Linear_regression.ipynb
+++ b/Linear_regression.ipynb
@@ -1014,6 +1014,326 @@
     "# Set the title of the scatter plot\n",
     "plt.title(\"Which is the pricey location by zipcode?\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the LinearRegression class from the linear_model module of the scikit-learn library.\n",
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>brokered_by</th>\n",
+       "      <th>status</th>\n",
+       "      <th>price</th>\n",
+       "      <th>bed</th>\n",
+       "      <th>bath</th>\n",
+       "      <th>acre_lot</th>\n",
+       "      <th>street</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>house_size</th>\n",
+       "      <th>prev_sold_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>103378.0</td>\n",
+       "      <td>for_sale</td>\n",
+       "      <td>105000.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>1962661.0</td>\n",
+       "      <td>Adjuntas</td>\n",
+       "      <td>Puerto Rico</td>\n",
+       "      <td>601.0</td>\n",
+       "      <td>920.000000</td>\n",
+       "      <td>2017-08-16 04:01:07.803498752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>52707.0</td>\n",
+       "      <td>for_sale</td>\n",
+       "      <td>80000.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>1902874.0</td>\n",
+       "      <td>Adjuntas</td>\n",
+       "      <td>Puerto Rico</td>\n",
+       "      <td>601.0</td>\n",
+       "      <td>1527.000000</td>\n",
+       "      <td>2017-08-16 04:01:07.803498752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>103379.0</td>\n",
+       "      <td>for_sale</td>\n",
+       "      <td>67000.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>1404990.0</td>\n",
+       "      <td>Juana Diaz</td>\n",
+       "      <td>Puerto Rico</td>\n",
+       "      <td>795.0</td>\n",
+       "      <td>748.000000</td>\n",
+       "      <td>2017-08-16 04:01:07.803498752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>31239.0</td>\n",
+       "      <td>for_sale</td>\n",
+       "      <td>145000.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>1947675.0</td>\n",
+       "      <td>Ponce</td>\n",
+       "      <td>Puerto Rico</td>\n",
+       "      <td>731.0</td>\n",
+       "      <td>1800.000000</td>\n",
+       "      <td>2017-08-16 04:01:07.803498752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>34632.0</td>\n",
+       "      <td>for_sale</td>\n",
+       "      <td>65000.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>331151.0</td>\n",
+       "      <td>Mayaguez</td>\n",
+       "      <td>Puerto Rico</td>\n",
+       "      <td>680.0</td>\n",
+       "      <td>2714.576625</td>\n",
+       "      <td>2017-08-16 04:01:07.803498752</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   brokered_by    status     price  bed  bath  acre_lot     street  \\\n",
+       "0     103378.0  for_sale  105000.0  3.0   2.0      0.12  1962661.0   \n",
+       "1      52707.0  for_sale   80000.0  4.0   2.0      0.08  1902874.0   \n",
+       "2     103379.0  for_sale   67000.0  2.0   1.0      0.15  1404990.0   \n",
+       "3      31239.0  for_sale  145000.0  4.0   2.0      0.10  1947675.0   \n",
+       "4      34632.0  for_sale   65000.0  6.0   2.0      0.05   331151.0   \n",
+       "\n",
+       "         city        state  zip_code   house_size  \\\n",
+       "0    Adjuntas  Puerto Rico     601.0   920.000000   \n",
+       "1    Adjuntas  Puerto Rico     601.0  1527.000000   \n",
+       "2  Juana Diaz  Puerto Rico     795.0   748.000000   \n",
+       "3       Ponce  Puerto Rico     731.0  1800.000000   \n",
+       "4    Mayaguez  Puerto Rico     680.0  2714.576625   \n",
+       "\n",
+       "                 prev_sold_date  \n",
+       "0 2017-08-16 04:01:07.803498752  \n",
+       "1 2017-08-16 04:01:07.803498752  \n",
+       "2 2017-08-16 04:01:07.803498752  \n",
+       "3 2017-08-16 04:01:07.803498752  \n",
+       "4 2017-08-16 04:01:07.803498752  "
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   brokered_by    status     price  bed  bath  acre_lot     street  \\\n",
+      "0     103378.0  for_sale  105000.0  3.0   2.0      0.12  1962661.0   \n",
+      "1      52707.0  for_sale   80000.0  4.0   2.0      0.08  1902874.0   \n",
+      "2     103379.0  for_sale   67000.0  2.0   1.0      0.15  1404990.0   \n",
+      "3      31239.0  for_sale  145000.0  4.0   2.0      0.10  1947675.0   \n",
+      "4      34632.0  for_sale   65000.0  6.0   2.0      0.05   331151.0   \n",
+      "\n",
+      "         city        state  zip_code   house_size  year  month  day  hour  \\\n",
+      "0    Adjuntas  Puerto Rico     601.0   920.000000  2017      8   16     4   \n",
+      "1    Adjuntas  Puerto Rico     601.0  1527.000000  2017      8   16     4   \n",
+      "2  Juana Diaz  Puerto Rico     795.0   748.000000  2017      8   16     4   \n",
+      "3       Ponce  Puerto Rico     731.0  1800.000000  2017      8   16     4   \n",
+      "4    Mayaguez  Puerto Rico     680.0  2714.576625  2017      8   16     4   \n",
+      "\n",
+      "   minute  second  dayofweek  \n",
+      "0       1       7          2  \n",
+      "1       1       7          2  \n",
+      "2       1       7          2  \n",
+      "3       1       7          2  \n",
+      "4       1       7          2  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extracting date and time features\n",
+    "df['year'] = df['prev_sold_date'].dt.year\n",
+    "df['month'] = df['prev_sold_date'].dt.month\n",
+    "df['day'] = df['prev_sold_date'].dt.day\n",
+    "df['hour'] = df['prev_sold_date'].dt.hour\n",
+    "df['minute'] = df['prev_sold_date'].dt.minute\n",
+    "df['second'] = df['prev_sold_date'].dt.second\n",
+    "df['dayofweek'] = df['prev_sold_date'].dt.dayofweek  # Monday=0, Sunday=6\n",
+    "\n",
+    "# Optionally drop the original datetime column if not needed\n",
+    "df.drop('prev_sold_date', axis=1, inplace=True)\n",
+    "\n",
+    "# Display the transformed DataFrame\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   brokered_by  status     price  bed  bath  acre_lot     street   city  \\\n",
+      "0     103378.0       0  105000.0  3.0   2.0      0.12  1962661.0     92   \n",
+      "1      52707.0       0   80000.0  4.0   2.0      0.08  1902874.0     92   \n",
+      "2     103379.0       0   67000.0  2.0   1.0      0.15  1404990.0   8786   \n",
+      "3      31239.0       0  145000.0  4.0   2.0      0.10  1947675.0  14312   \n",
+      "4      34632.0       0   65000.0  6.0   2.0      0.05   331151.0  10934   \n",
+      "\n",
+      "   state  zip_code   house_size  year  month  day  hour  minute  second  \\\n",
+      "0     41     601.0   920.000000  2017      8   16     4       1       7   \n",
+      "1     41     601.0  1527.000000  2017      8   16     4       1       7   \n",
+      "2     41     795.0   748.000000  2017      8   16     4       1       7   \n",
+      "3     41     731.0  1800.000000  2017      8   16     4       1       7   \n",
+      "4     41     680.0  2714.576625  2017      8   16     4       1       7   \n",
+      "\n",
+      "   dayofweek  \n",
+      "0          2  \n",
+      "1          2  \n",
+      "2          2  \n",
+      "3          2  \n",
+      "4          2  \n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# list of categorical (string) columns in the DataFrame\n",
+    "categorical_columns = ['status', 'city', 'state'] \n",
+    "\n",
+    "# Initialize the Label Encoder\n",
+    "label_encoder = LabelEncoder()\n",
+    "\n",
+    "# Apply Label Encoding to each categorical column\n",
+    "for col in categorical_columns:\n",
+    "    df[col] = label_encoder.fit_transform(df[col])\n",
+    "\n",
+    "# Display the transformed DataFrame\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   brokered_by     price  bed  bath  acre_lot     street  zip_code  \\\n",
+      "0     103378.0  105000.0  3.0   2.0      0.12  1962661.0     601.0   \n",
+      "1      52707.0   80000.0  4.0   2.0      0.08  1902874.0     601.0   \n",
+      "2     103379.0   67000.0  2.0   1.0      0.15  1404990.0     795.0   \n",
+      "3      31239.0  145000.0  4.0   2.0      0.10  1947675.0     731.0   \n",
+      "4      34632.0   65000.0  6.0   2.0      0.05   331151.0     680.0   \n",
+      "\n",
+      "    house_size  year  month  ...  state_46  state_47  state_48  state_49  \\\n",
+      "0   920.000000  2017      8  ...     False     False     False     False   \n",
+      "1  1527.000000  2017      8  ...     False     False     False     False   \n",
+      "2   748.000000  2017      8  ...     False     False     False     False   \n",
+      "3  1800.000000  2017      8  ...     False     False     False     False   \n",
+      "4  2714.576625  2017      8  ...     False     False     False     False   \n",
+      "\n",
+      "   state_50  state_51  state_52  state_53  state_54  state_Other  \n",
+      "0     False     False     False     False     False        False  \n",
+      "1     False     False     False     False     False        False  \n",
+      "2     False     False     False     False     False        False  \n",
+      "3     False     False     False     False     False        False  \n",
+      "4     False     False     False     False     False        False  \n",
+      "\n",
+      "[5 rows x 4053 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assign string columns to the variable 'categorical columns'\n",
+    "categorical_columns = ['status', 'city', 'state']\n",
+    "\n",
+    "# Define a threshold for grouping rare categories\n",
+    "threshold = 100  \n",
+    "\n",
+    "for col in categorical_columns:\n",
+    "    value_counts = df[col].value_counts()\n",
+    "    to_replace = value_counts[value_counts <= threshold].index\n",
+    "    df[col] = df[col].replace(to_replace, 'Other')\n",
+    "\n",
+    "# Apply One-Hot Encoding\n",
+    "df = pd.get_dummies(df, columns=categorical_columns, drop_first=True)\n",
+    "\n",
+    "# Display the transformed DataFrame\n",
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
