--- a/Linear_regression.ipynb
+++ b/Linear_regression.ipynb
@@ -1215,6 +1215,16 @@
     "# Evaluate the performance of the linear regression model on the test data\n",
     "model.score(x_test,y_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import necessary library\n",
+    "import pickle"
+   ]
   }
  ],
  "metadata": {
