--- a/Random_Forest model - Bankcustomerchurn.ipynb
+++ b/Random_Forest model - Bankcustomerchurn.ipynb
@@ -1499,6 +1499,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### MODEL DEVELOPMENT"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 211,
    "metadata": {},
